# libbwt-jni

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  SHA256SUMS.asc  settings.gradle
.cargo/: config
gradle/wrapper/: gradle-wrapper.properties
scripts/: build-android.sh  build-helpers.sh  build.sh  release-footer.md  release.sh
src/: lib.rs
