[package]
name = "bwt-jni"
version = "0.0.0"
description = "JNI bindings for Bitcoin Wallet Tracker"
authors = ["Nadav Ivgi <nadav@shesek.info>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bwt-dev/libbwt-jni"
repository = "https://github.com/bwt-dev/libbwt-jni"
keywords = [ "bitcoin", "bwt", "bitcoin wallet tracker" ]
edition = "2018"
include = [ "src", "LICENSE" ]

[features]
default = [ "electrum", "http" ]
android = [ "bwt/android" ]
electrum = [ "bwt/electrum" ]
http = [ "bwt/http" ]
track-spends = [ "bwt/track-spends" ]
webhooks = [ "bwt/webhooks" ]
extra  = [ "bwt/extra" ]
pretty_env_logger = [ "bwt/pretty_env_logger" ]
dirs = [ "bwt/dirs" ]
signal-hook = [ "bwt/signal-hook" ]

[lib]
crate-type = [ "lib", "cdylib" ]

[dependencies]
bwt = { path = "../bwt", default-features = false }
#bwt = { version = "0.2.0", default-features = false }
jni = "0.18.0"
log = "0.4.11"
serde_json = "1.0.59"
